use java 17 features (#711)